--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@
 html {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 100%;
-  background: #333;
+  background-image: url("helloworld.png");
+}
+
+h4 {
+	font-style: oblique;
 }
 
 #page-wrapper {
