--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
 html {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 100%;
+	margin-top: 50px;
+}
+
+body { 
+	background-color: purple;
 }
 
 h4 {
